--- a/compile_jdk/make_error_macos.10.9
+++ b/compile_jdk/make_error_macos.10.9
@@ -193,9 +193,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/debug.hpp:29:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/globalDefinitions.hpp:33:
@@ -211,9 +211,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/debug.hpp:29:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/globalDefinitions.hpp:33:
@@ -229,9 +229,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/debug.hpp:29:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/globalDefinitions.hpp:33:
@@ -244,9 +244,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/debug.hpp:29:
 /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/globalDefinitions.hpp:251:90: error: implicit
@@ -290,9 +290,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:125:
 /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/cpu/x86/vm/c2_globals_x86.hpp:58:47: error: implicit conversion changes
       signedness: 'int' to 'unsigned long' [-Werror,-Wsign-conversion]
@@ -315,9 +315,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:125:
 /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/cpu/x86/vm/c2_globals_x86.hpp:91:37: error: implicit conversion changes
       signedness: 'int' to 'unsigned long' [-Werror,-Wsign-conversion]
@@ -340,9 +340,9 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/allocation.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/allocation.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/globals.hpp:125:
 /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/cpu/x86/vm/c2_globals_x86.hpp:92:37: error: implicit conversion changes
       signedness: 'int' to 'unsigned long' [-Werror,-Wsign-conversion]
@@ -365,8 +365,8 @@ In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_a
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/code/oopRecorder.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/runtime/handles.hpp:28:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/oops/klass.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/genOopClosures.hpp:28:
-In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/memory/iterator.hpp:31:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/genOopClosures.hpp:28:
+In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/me.ywd.jvm.gc.memory/iterator.hpp:31:
 In file included from /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/top.hpp:34:
 /Users/ye_wenda/Applications/openjdk-7u40-fcs-src-b43-26_aug_2013/hotspot/src/share/vm/utilities/ostream.hpp:76:46: error: implicit conversion changes
       signedness: 'const int' to 'unsigned long long' [-Werror,-Wsign-conversion]
